--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beausreact",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alba599.github.io/gratitude",
+  "homepage": "https://alba599.github.io/gratitude-list",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.0.2"
+    "gh-pages": "^2.0.1"
   }
 }
